Add Load More button to see more video list entries

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="src/components/app.js"></script>
   <script src="src/components/videoPlayer.js"></script>
   <script src="src/components/search.js"></script>
+  <script src="src/components/loadMore.js"></script>
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
 </body>
